# jak-project

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  appveyor.yml
.github/workflows/: linux-workflow.yaml  macOS-workflow.yaml  windows-workflow.yaml
common/: CMakeLists.txt
common/cross_os_debug/: xdbg.cpp  xdbg.h
common/cross_sockets/: xsocket.cpp  xsocket.h
common/goos/: Reader.cpp  ReplUtils.cpp
common/type_system/: Type.cpp
common/util/: BinaryWriter.h  FileUtil.cpp  FileUtil.h
decompiler/IR2/: Env.h
decompiler/config/: all-types.gc  jak1_ntsc_black_label.jsonc  jak2_ntsc_v1.jsonc  jak3_ntsc.jsonc
decompiler/config/all-types/jak1/: build-order.json
decompiler/config/all-types/jak1/cgo/game/: bounding-box-h.gc  bounding-box.gc  capture.gc  connect.gc  decomp-h.gc  display-h.gc  display.gc  dma-buffer.gc  dma-disasm.gc  dma-h.gc  dma.gc  draw-node-h.gc  drawable-actor-h.gc  drawable-ambient-h.gc  drawable-h.gc  drawable-inline-array-h.gc  euler-h.gc  euler.gc  file-io.gc  font-h.gc  generic-h.gc  geometry-h.gc  geometry.gc  glist-h.gc  glist.gc  gs.gc  gsound-h.gc  hint-control-h.gc  level-h.gc  lights-h.gc  loader-h.gc  main-h.gc  math-camera-h.gc  math.gc  matrix-h.gc  matrix.gc  memory-usage-h.gc  mspace-h.gc  ocean-h.gc  pad.gc  (+19 more)
decompiler/config/all-types/jak1/cgo/kernel/: built-ins.gc  dgo-h.gc  gcommon.gc  gkernel-h.gc  gkernel.gc  gstate.gc  gstring.gc  pskernel.gc  types.gc
decompiler/config/all-types/jak1/common/: bea-types.gc  cit-types.gc  common-types.gc  dar-types.gc
decompiler/config/all-types/jak1/symbols/: symbols.gc
decompiler/config/jak1_ntsc_black_label/: hacks.jsonc  label_types.jsonc  stack_structures.jsonc  type_casts.jsonc  var_names.jsonc
decompiler/util/: DataParser.cpp
docs/: api-docs.html  index.html  package-lock.json  package.json
docs-and-tooling/: README.md  package-lock.json  package.json  vue.config.js
docs-and-tooling/public/: api-docs.html
docs-and-tooling/public/docs/: README.md
docs-and-tooling/src/: App.vue
docs-and-tooling/src/components/: FileReader.vue
docs-and-tooling/src/router/: index.js
docs-and-tooling/src/views/: DecompilerConfigs.vue  Docs.vue  GameConfigs.vue  GenerateTypes.vue  Home.vue
docs/css/: about.fae4172a.css
docs/docs/: _sidebar.md  guide.md
docs/gh-pages-proj/: package.json
docs/js/: about.1f53f02a.js  about.1f53f02a.js.map  about.5f628b42.js  about.5f628b42.js.map  app.2894ee1c.js  app.2894ee1c.js.map  app.e32e9dd3.js  app.e32e9dd3.js.map  chunk-vendors.6b6e888c.js  chunk-vendors.6b6e888c.js.map
docs/src/: App.vue  background.js
docs/src/router/: index.js
docs/src/views/: DecompilerConfigs.vue  Home.vue
game/: CMakeLists.txt  runtime.cpp
game/kernel/: kmachine.cpp  kmachine.h  kprint.h  kscheme.cpp  ksocket.cpp
game/system/: Deci2Server.cpp  Deci2Server.h  SystemThread.h
goal_src/engine/geometry/: vol-h.gc
goalc/compiler/compilation/: CompilerControl.cpp
goalc/emitter/: CodeTester.cpp
goalc/goos/: TextDB.cpp
goalc/listener/: Listener.cpp
scripts/emacs/: load-srefactor.el
test/: test_common_util.cpp  test_main.cpp
test/goalc/: test_collections.cpp  test_control_statements.cpp  test_variables.cpp  test_with_game.cpp
test/goalc/framework/: test_runner.cpp
